force-app/main/default/objects/GDPR_Erasure_Event__e/GDPR_Erasure_Event__e.object-meta.xml
<CustomObject>
    <label>GDPR Erasure Event</label>
    <pluralLabel>GDPR Erasure Events</pluralLabel>
    <description>Platform Event for GDPR erasure audit trail</description>
</CustomObject>