force-app/main/default/objects/GDPR_Erasure_Event__e/fields/Audit_Log_Id__c.field-meta.xml
<CustomField>
    <fullName>Audit_Log_Id__c</fullName>
    <description>Reference to the audit log record</description>
    <label>Audit Log ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>