force-app/main/default/objects/GDPR_Erasure_Event__e/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <description>Email of the erased data subject</description>
    <label>Contact Email</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>