force-app/main/default/objects/GDPR_Erasure_Event__e/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <label>Contact ID</label>
    <type>Text</type>
    <length>18</length>
    <description>ID of the Contact being erased</description>
</CustomField>