force-app/main/default/objects/GDPR_Erasure_Event__e/fields/Deletion_Date__c.field-meta.xml
<CustomField>
    <fullName>Deletion_Date__c</fullName>
    <description>Date and time of deletion</description>
    <label>Deletion Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>