force-app/main/default/objects/GDPR_Erasure_Event__e/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Text</type>
    <length>255</length>
    <description>Type of erasure event (Initiated, Completed, Failed)</description>
</CustomField>