force-app/main/default/objects/GDPR_Erasure_Event__e/fields/Records_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Records_Deleted__c</fullName>
    <label>Records Deleted</label>
    <type>Text</type>
    <length>255</length>
    <description>Number of records deleted (stored as text for platform events)</description>
</CustomField>