force-app/main/default/objects/GDPR_Erasure_Event__e/fields/Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Request_Id__c</fullName>
    <label>Request ID</label>
    <type>Text</type>
    <length>18</length>
    <description>ID of the GDPR Erasure Request record</description>
</CustomField>